# bipass-wikidata-pathfinder

./: .gitignore  README.md  docker-compose.yml
attic/: adjacent_entity_query.py  match_string_qid_mapping.json  qid_description_mapping.json  qid_label_mapping.json  qid_outgoing_mapping.json  query_refinery.py  query_stats.py  wikidata_queries_10000_topics_genre.csv  wikidata_queries_10000_topics_refined.csv  wikidata_queries_10000_topics_refined_verbose.csv  wikidata_queries_20000_topics_genre.csv  wikidata_queries_20000_topics_refined.csv  wikidata_queries_20000_topics_refined_verbose.csv  wikidata_queries_60000_topics_genre.csv  wikidata_queries_60000_topics_refined.csv  wikidata_queries_60000_topics_refined_verbose.csv  wikidata_wrapper.py
data/: benchmark_results_0.23031994047619048_0.02808779761904762_0.58984375.toml  benchmark_results_0.6991370827362581_0.10886217551256613_0.822998046875.toml  benchmark_results_0_0_1.toml  benchmark_results_0_1_0.toml  benchmark_results_1_0.5_1.toml  benchmark_results_1_0_1.toml  match_string_qid_mapping.json  optimizer_results.csv  wikidata_queries_10000_topics_genre.csv
data/adjacency_list/: db  snap.00000000000D4EB9  snap.00000000000DA0AA  snap.00000000000DF826  snap.00000000000EB49D  (+14 more)
pathfinder/: Cargo.toml  Dockerfile  config.toml
pathfinder/src/: api_connector.rs  costs_calculator.rs  main.rs  pathfinder.rs  store_connector.rs
query_factory/: Dockerfile  constants.py  query_factory.py
wembed_api/: Dockerfile  wembed_api.py
wikidata_api/: Dockerfile  wd_properties.csv  wd_properties_parser.py  wikidata_api.py
(+34 files in other folders)
