[package]
name = "pathfinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
cached = "0.42.0"
csv = "1.2.1"
env_logger = "0.10.0"
itertools = "0.11.0"
log = "0.4.17"
once_cell = "1.17.1"
priority-queue = "1.3.1"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
simplers_optimization = "0.4.3"
sled = "0.34.7"
statrs = "0.16.0"
toml = "0.7.2"
